# CUwr

./: .gitignore  CMakeLists.txt
MIA/: 262144.cpp  Alfabet.cpp  CH1.cpp  CHOR.cpp  COWDECATHLON.cpp  COWJOG.cpp  ELEV.cpp  ETERNAL.cpp  GUARDMARK.cpp  Intprod.cpp  KOLDRZ.cpp  NPOK.cpp  PROMOTE.cpp  Podzi.cpp  Ronald.cpp  Savrsen.cpp  Sirini.cpp  TETRIS2D.cpp  WPI_BAN.cpp  acm.cpp  gcdex.cpp  kamery.cpp
Potyczki2k17/: skarbonka.cpp
Uwr/W0/: narcissistic.c
Uwr/W1/: goldbach.c  rot13.c
Uwr/W10/: ONP.c  databaseController.c  entry.c  record.c  record.h
Uwr/W10/Database/: database.c  database.h  field.c  field.h  record.h  table.c  table.h
Uwr/W2/: calendar.c  calendar2.c  factorial.c  sameline.c
Uwr/W3/: fibo1.c  fibo2.c  przystanki.c
Uwr/W4/: bignum.c  brydz.c
Uwr/W5/: tetris.c
Uwr/W5/ONP/: main.c  stack.c  stack.h  stack2.c  stack2.h  wyrazenie.c  wyrazenie.h
Uwr/W6/: MergeSort.c  equals.c  pbm.c
Uwr/W7/: BST_test.c  BinaryTree.c  BinaryTree.h  Labirynt.c
Uwr/W8/: fileFilter.c  huffman.c  test.txt
Uwr/W8/tests/: test_bufferOverflow  test_random
Uwr/W9/: ball.c  tree.c
Uwr/utils/: deque.c  deque.h
